add basic layoout

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
 <body>
-  <button type="button" class="btn btn-primary">click</button>
+  <header class="header bg-dark">
+    <nav class="navbar navbar-expand-lg">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="dropdown mr-auto">
+          <a class="navbar-brand nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Store Name</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a href="#" class="nav-link"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link"></a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Analistics</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Audience</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Product Recommendations</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Search</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Emails</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Reviews</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Push</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Rec one</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Settings</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">&#36; 999</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main class="main">
+    <div>
+      <div>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Your Store</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Product Recommendations</li>
+          </ol>
+        </nav>
+        <h1 class="h1">Product recommendations blocks</h1>
+      </div>
+
+      <a href="#" class="btn btn-success">Add new block</a>
+    </div>
+
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">Head</th>
+          <th scope="col">Status (30 minutes)</th>
+          <th scope="col">CTR (%)</th>
+          <th scope="col">Block's filing rate</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>@mdo</td>
+          <td>@mdo</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <td>@mdo</td>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <td>@mdo</td>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td>@mdo</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+  
+  <footer class="footer">
+    <section class="footer--top">
+      <ul class="nav">
+        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Docs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">FAQ</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+      </ul>
+      <ul class="nav">
+        <li class="nav-item"><a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a></li>
+        <li class="nav-item"><a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a></li>
+      </ul>
+    </section>
+    <section class="footer--bottom">
+      <ul class="nav">
+        <li class="nav-item"><a href="#" class="nav-link">Cookie Policy</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Personal Data Policy</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Privacy Policy</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Terms and Conditions</a></li>
+      </ul>
+    </section>
+  </footer>
 </body>
 </html>
