--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Product recommendations</title>
 </head>
 <body class="d-flex flex-column justify-content-between">
   <header class="header bg-dark mb-20">
@@ -106,9 +106,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -139,9 +139,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -176,9 +176,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -213,9 +213,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -246,9 +246,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -283,9 +283,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-pause-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -316,9 +316,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -349,9 +349,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -382,9 +382,9 @@
             </td>
             <td class="align-middle">
               <ul class="nav">
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="fas fa-cog"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-secondary p-0"><i class="far fa-trash-alt"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fas fa-cog"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="far fa-play-circle"></i></a></li>
+                <li class="nav-item"><a href="#" class="nav-link p-0"><i class="far fa-trash-alt"></i></a></li>
               </ul>
             </td>
           </tr>
@@ -394,12 +394,12 @@
   </main>
   
   <footer class="footer mt-auto pb-4">
-    <section class="d-flex justify-content-between align-items-center border-top">
+    <section class="footer_top d-flex justify-content-between align-items-center border-top">
       <ul class="nav">
-        <li class="nav-item font-weight-bold"><a href="#" class="nav-link">Blog</a></li>
-        <li class="nav-item font-weight-bold"><a href="#" class="nav-link">Docs</a></li>
-        <li class="nav-item font-weight-bold"><a href="#" class="nav-link">FAQ</a></li>
-        <li class="nav-item font-weight-bold"><a href="#" class="nav-link">Contact Us</a></li>
+        <li class="nav-item"><a href="#" class="nav-link font-weight-bold">Blog</a></li>
+        <li class="nav-item"><a href="#" class="nav-link font-weight-bold">Docs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link font-weight-bold">FAQ</a></li>
+        <li class="nav-item"><a href="#" class="nav-link font-weight-bold">Contact Us</a></li>
       </ul>
       <ul class="nav">
         <li class="nav-item"><a href="#" class="nav-link p-0 mr-3"><i class="fab fa-facebook-f"></i></a></li>
