--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart" height="55px" width="110px"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -119,7 +121,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -152,7 +156,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-exclamation-triangle text-danger mr-2"></i>
                   <div>
@@ -189,7 +195,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -226,7 +234,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -259,7 +269,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -296,7 +308,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -329,7 +343,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -362,7 +378,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
