--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="./favicon.ico">
   <title>Product recommendations</title>
 <link rel="shortcut icon" href="favicon.ico"></head>
 <body class="d-flex flex-column justify-content-between">
@@ -83,7 +82,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart" height="55px" width="110px"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -120,7 +121,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -153,7 +156,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-exclamation-triangle text-danger mr-2"></i>
                   <div>
@@ -190,7 +195,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -227,7 +234,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -260,7 +269,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
@@ -297,7 +308,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -330,7 +343,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
@@ -363,7 +378,9 @@
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
-                <div class="histogram mr-3"></div>
+                <div class="histogram mr-3">
+                  <canvas class="activity-chart"></canvas>
+                </div>
                 <div class="desc d-flex align-items-center">
                   <i class="fas fa-info-circle text-secondary mr-2"></i>
                   <div>
