--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Product recommendations</title>
-<link rel="shortcut icon" href="favicon.ico"></head>
+<link rel="shortcut icon" href="favicon.ico"><link href="main.css" rel="stylesheet"></head>
 <body class="d-flex flex-column justify-content-between">
   <header class="header bg-dark mb-20">
     <nav class="navbar navbar-expand-lg py-1">
