fix text and colors for rate

--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,7 @@
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
                     <div class="font-weight-bold text-success">In use</div>
-                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minute ago</span></div>
+                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minutes ago</span></div>
                   </div>
                 </div>
               </div>
@@ -152,7 +152,7 @@
           <tr>
             <td class="align-middle">
               <div class="font-weight-bold">Similar products</div>
-              <div class="smalltext-black-50">Usually set on product details page</div>
+              <div class="small text-black-50">Usually set on product details page</div>
             </td>
             <td class="align-middle">
               <div class="d-flex align-items-center">
@@ -163,7 +163,7 @@
                   <i class="fas fa-exclamation-triangle text-danger mr-2"></i>
                   <div>
                     <div class="font-weight-bold text-danger">Error</div>
-                    <div class="smalltext-black-50">Last request: <span class="font-weight-bold text-danger">> 10 minute ago</span></div>
+                    <div class="small text-black-50">Last request: <span class="font-weight-bold text-danger">> 10 minutes ago</span></div>
                   </div>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
                     <div class="font-weight-bold text-success">A/B-testing</div>
-                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minute ago</span></div>
+                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minutes ago</span></div>
                   </div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
                   <i class="far fa-check-circle text-success mr-2"></i>
                   <div>
                     <div class="font-weight-bold text-success">In use</div>
-                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minute ago</span></div>
+                    <div class="small text-black-50">Last request: <span class="font-weight-bold">2 minutes ago</span></div>
                   </div>
                 </div>
               </div>
